WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14148
LEAK: Serious memory consumption and leak when loading QT movies.
https://bugs.webkit.org/show_bug.cgi?id=14148
Summary
LEAK: Serious memory consumption and leak when loading QT movies.
Ben S. Stahlhood II
Reported
2007-06-14 14:07:52 PDT
There seems to be an issue when loading pages that have QT movies. Memory consumption goes from 30-50K range to over 230K range and stays in the 200K range, even after closing the movie and leaving the site where the movie was hosted. Memory Test At launch ========= * All go to start page google.com FireFox - 27,992K IE - 33,652K Safari - 38,476K Load Page www.apple.com ======================= FireFox - 28,920K IE - 38,560K Safari - 44,752K Load Page www.apple.com/mac =========================== FireFox - 34,328K IE - 52,324K Safari - 56,872K Load Page www.apple.com/macosx/leopard/ ======================================= FireFox - 40,368K IE - 52,284K Safari - 62,852K *Click "Watch the Demo" under Desktop FireFox - 78,288K IE - 107.144K Safari - 244,932K Load Page www.google.com ======================================= *memory stayed pretty constant for each browser, even after I left them sit for awhile. FireFox - 53,624K IE - 59,512K Safari - 218,032K Minimizing Browser ================================ * This last step was interesting. After I completed all the above steps, I minimized each browser and got the following results. FireFox - 67,032K IE - 1,500K Safari - 3,452K
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-06-14 14:23:04 PDT
Thanks for the detailed bug report! Just to confirm: your "Minimizing Browser" step is simply clicking the "minimize" button in the title bar while still looking at the Google web page?
Mark Rowe (bdash)
Comment 2
2007-06-14 15:27:02 PDT
<
rdar://problem/5271174
>
Ben S. Stahlhood II
Comment 3
2007-06-14 15:54:13 PDT
(In reply to
comment #1
)
> Thanks for the detailed bug report! Just to confirm: your "Minimizing > Browser" step is simply clicking the "minimize" button in the title bar while > still looking at the Google web page? >
Mark, Yes, that is correct.
Geoffrey Garen
Comment 4
2007-07-19 20:22:48 PDT
Fixed in r 24459.
http://trac.webkit.org/projects/webkit/changeset/24459
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug