WebCore/loader/ResourceLoader.h
@@ -105,6 +105,8 @@ namespace WebCore {
         ResourceHandle* handle() const { return m_handle.get(); }
         bool sendResourceLoadCallbacks() const { return m_sendResourceLoadCallbacks; }
 
+        void setShouldBufferData(bool shouldBufferData) { m_shouldBufferData = shouldBufferData; }
+
     protected:
         ResourceLoader(Frame*, bool sendResourceLoadCallbacks);
 
@@ -127,6 +129,7 @@ namespace WebCore {
         bool m_calledDidFinishLoad;
 
         bool m_sendResourceLoadCallbacks;
+        bool m_shouldBufferData;
 protected:
         // FIXME: Once everything is made cross platform, these can be private instead of protected
         RefPtr<Frame> m_frame;
