WebCore/plugins/win/PluginStreamWin.h
@@ -87,6 +87,8 @@ namespace WebCore {
 
         Vector<char>* m_deliveryData;
 
+        HANDLE m_tempFileHandle;
+
         const NPPluginFuncs* m_pluginFuncs;
         NPP m_instance;
         uint16 m_transferMode;
